--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,27 +6,19 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(WIN32)
-    set(CMAKE_SHARED_LIBRARY_PREFIX "")
-    set(CMAKE_STATIC_LIBRARY_PREFIX "")
-    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-endif()
-
 set(SOURCE_DIR ${PROJECT_SOURCE_DIR})
 set(STR_DIR "${PROJECT_SOURCE_DIR}/src")
 set(TESTS_DIR "${PROJECT_SOURCE_DIR}/tests")
 
-include_directories(${SOURCE_DIR})
-
 file(GLOB SOURCE_FILES
         "${SOURCE_DIR}/*.cpp"
-        "${SOURCE_DIR}/*.h"
+        "${SOURCE_DIR}/*.hpp"
         )
 
 add_subdirectory(${STR_DIR})
 add_subdirectory(${TESTS_DIR})
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
